k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taco-about-it-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taco-about-it-backend
  template:
    metadata:
      labels:
        app: taco-about-it-backend
    spec:
      containers:
        - name: taco-about-it-backend
          image: 975050376676.dkr.ecr.us-west-1.amazonaws.com/taco-about-it-backend:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: taco-about-it-backend
spec:
  type: LoadBalancer  # This makes the service accessible externally
  ports:
    - port: 8000      # External port
      targetPort: 8000 # Internal container port
  selector:
    app: taco-about-it-backend
