k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tacoaboutit-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:975050376676:certificate/b384e1e4-3d15-4256-a279-205c925b9929
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
spec:
  ingressClassName: alb  # <-- This replaces the deprecated annotation
  rules:
    - host: www.tacoaboutit.app  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taco-about-it-backend
                port:
                  number: 8000
